# apeFEA

./: .gitignore  README.md  pyproject.toml
apeFEA/: __init__.py
apeFEA - bak/: __init__.py
apeFEA - bak/core/: __init__.py  domain.py  node.py  numbering.py
apeFEA - bak/geometry/: __init__.py  geometry.py  node_manager.py  plot_geometry.py
apeFEA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apeFEA/core/: __init__.py  config.py  line.py  model.py  nodal_load.py  node.py  restraints.py
apeFEA/domain/: __init__.py  domain.py  domain_element_manager.py  domain_node_manager.py  element_domain.py  node_domain.py  numbering.py
apeFEA/elements/: __init__.py  elastic2D_beam.py  element.py
apeFEA/elements/one_dimension/: __init__.py  frame_element.py  one_dim_element.py
apeFEA/elements/one_dimension/transformations/: __init__.py  corrotational_transformation.py  (+4 more)
apeFEA/geometry/: __init__.py  geometry.py  line_manager.py  node_manager.py  plot_config.py  plot_geometry.py
apeFEA/integrator/: __init__.py  load_control.py
apeFEA/materials/: __init__.py  concrete01.py  elasto_plastic.py  linear_elastic.py  material.py  uniaxial_elastic_material.py
apeFEA/mesh/: __init__.py  mesh.py
apeFEA/section/: __init__.py  rectangular_section.py  section.py
apeFEA/sections/: __init__.py  section.py
apeFEA/solver/: __init__.py  newton_raphson.py
apeFEA/timeseries/: __init__.py  timeseries.py  timeseries_abstraction.py
notebooks/: geometry_test_domain.ipynb  geometry_test_file.ipynb  geometry_test_line.ipynb  geometry_test_material.ipynb
