[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "apeFEA"
version = "0.1.0"
description = "Nonlinear FEM framework - LARGA VIDA AL LADRUÑO!!!"
authors = [
  { name = "Nicolás Mora Bowen", email = "nmorabowen@gmail.com" },
  { name = "Patricio Palacios", email = "pxpalacios@gmail.com" }
]
dependencies = ["numpy", "matplotlib"]